add markup for Donation form, fix box shadow of input, fix background of drop-down list

--- a/sites/all/themes/JBW/css/festival.css
+++ b/sites/all/themes/JBW/css/festival.css
@@ -57,6 +57,10 @@
     margin-left: 5px;
 }
 
+.page-node #region-content .node_right_part .views-field-body .views-field-body{
+    margin-left: 0;
+}
+
 .page-node #region-content .node_left_part .views-field-field-event-image-2{
     margin-top: 10px;
 }
