--- a/sites/all/themes/JBW/css/commerce.css
+++ b/sites/all/themes/JBW/css/commerce.css
@@ -232,7 +232,8 @@
     width: auto;
     height: 43px;
     border-radius: 0;
-    
+    width: 136px;
+    font-size: 0;
 }
 
 /*------------------------Confirmation----------------------------------------*/
